     of the driver, enabling simulation of UPS alarm states more closely
     in line with modern, real-world UPS driver implementations. This
     follows the updated principle of keeping alarm states decoupled from
     the `ups.status` variable, with alarms now raised via common alarm
     functions rather than direct manipulation. [issue #2928, PR #2936]

 - `nutdrv_qx` driver updates:
   * Introduced `innovart33` protocol support for Ippon Innova RT 3/3 topology
     UPSes. [#2938]
   * Updated `megatec` protocol for more detailed responses to `I` query
     which may return `ups.serial` (after a shorter `device.mfr`) and the
     `battery.runtime` (after a shorter `device.model`). Note that the
     expected response is shorter than in other dialects (38 vs. 39 bytes),
     so if this change breaks anything for your UPS that reported the values
     above correctly (e.g. the `ups.firmware` version becomes shorter or
     none of these are reported), please let NUT developers know. [#2980]

 - `pijuice` driver updates:
   * Converted to NUT standard use of `status_set()` with single-token values.
     [issue #2708]

 - `snmp-ups` driver updates:
   * Added support for "fun"/"nuf" methods called from mapping tables to
     report back to the driver that an argument value was not supported,
     so `setvar()` or `instcmd()` can not proceed safely and should return
     `STAT_SET_CONVERSION_FAILED` or `STAT_INSTCMD_CONVERSION_FAILED`. [#3017]
   * Fixed `ups.test.date` to be semi-static in `apc-mib` mapping, so it
     would be queried more than once per driver up-time. [issue #3011]
   * Fixed debug-logging around `SU_FLAG_STATIC` entries to clarify when
     they get skipped. [issue #3011]

 - `usbhid-ups` driver updates:
   * Added support for "fun"/"nuf" methods called from mapping tables to
     report back to the driver that an argument value was not supported,
     so `setvar()` or `instcmd()` can not proceed safely and should return